<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInActivity"
    android:background="@drawable/bg_sign_up">
    <LinearLayout
        android:id="@+id/layoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/icBack"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp">

            <ImageView
                android:id="@+id/icLogo"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo"
                android:scaleType="centerInside"
                android:layout_marginEnd="@dimen/dimen_40dp"
                />

            <TextView
                android:id="@+id/tvIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PolyOder"
                android:fontFamily="@font/leoscar_serif"
                android:textColor="@color/brown_250"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_28dp"
                android:layout_gravity="center|bottom"
                android:layout_marginStart="@dimen/dimen_55dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                />
        </FrameLayout>

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/dimen_17dp"
            android:layout_marginBottom="@dimen/dimen_15dp"/>
        <EditText
            android:id="@+id/name"
            style="@style/styleEditTextLogin"
            android:drawableStart="@drawable/ic_user"
            android:inputType="text"
            android:elevation="@dimen/dimen_10dp"
            android:hint="@string/sign_up_text_hint_name"
            android:layout_marginHorizontal="@dimen/dimen_30dp"
            />

        <EditText
            android:id="@+id/email"
             style="@style/styleEditTextLogin"
            android:drawableStart="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:elevation="@dimen/dimen_10dp"
            android:hint="@string/sign_up_text_hint_email"
            android:layout_marginHorizontal="@dimen/dimen_30dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPass"
            style="@style/styleTilEditTextLogin"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                style="@style/styleEditTextLogin"
                android:drawableStart="@drawable/ic_password"
                android:inputType="textPassword"
                android:hint="@string/sign_up_text_hint_pass"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRePass"
            style="@style/styleTilEditTextLogin"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/re_pass"
                style="@style/styleEditTextLogin"
               android:drawableStart="@drawable/ic_password"
                android:inputType="textPassword"
                android:hint="@string/sign_up_text_hint_re_pass"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_45dp"
            app:cardElevation="@dimen/dimen_2dp">
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_text_button"
                android:textAllCaps="false"
                android:paddingHorizontal="@dimen/dimen_60dp"
                android:background="@drawable/custom_button_sign_up"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="@dimen/dimen_20dp"
                android:textColor="@color/black"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Large.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>