<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInActivity"
    android:background="@drawable/bg_login">
    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_marginBottom="@dimen/dimen_30dp">

            <ImageView
                android:id="@+id/icLogo"
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height="@dimen/dimen_150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo"
                android:scaleType="centerInside"
                android:layout_marginEnd="@dimen/dimen_50dp"
               />

            <TextView
                android:id="@+id/tvIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PolyOder"
                android:fontFamily="@font/leoscar_serif"
                android:textColor="@color/brown_250"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginStart="@dimen/dimen_55dp"
                android:layout_marginBottom="@dimen/dimen_15dp"
              />
        </FrameLayout>



        <EditText
            android:id="@+id/email"
            style="@style/styleEditTextLogin"
            android:layout_marginHorizontal="@dimen/dimen_30dp"
            android:drawableStart="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:hint="@string/sign_in_text_hint_email"
            android:elevation="@dimen/dimen_10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/styleTilEditTextLogin"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/styleEditTextLogin"
                android:drawableStart="@drawable/ic_password"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:hint="@string/sign_in_text_hint_pass"
                android:layout_marginTop="@dimen/dimen_20dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_forgot_pass"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:textSize="@dimen/dimen_16dp"
            android:fontFamily="@font/poppins_mediumltalic"
            android:textColor="@color/brown_500"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:cardBackgroundColor="@color/brown_500"
            app:cardElevation="@dimen/dimen_8dp">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_text_button"
                android:textAllCaps="false"
                android:paddingHorizontal="@dimen/dimen_40dp"
                android:background="@drawable/custom_button_login"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="@dimen/dimen_20dp"
                android:textColor="@color/black"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:padding="@dimen/dimen_5dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <View
                android:id="@+id/line1"
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="@color/brown_500"
                android:elevation="1dp"
               />
            <TextView
                android:id="@+id/tvContent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_text_content_3"
                android:layout_marginHorizontal="@dimen/dimen_15dp"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_18dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
            <View
                android:id="@+id/line2"
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="@color/brown_500"
                android:elevation="1dp"
             />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cav_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/dimen_5dp"
            app:cardCornerRadius="@dimen/dimen_8dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dimen_8dp"
                android:paddingHorizontal="@dimen/dimen_20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_30dp"
                    android:src="@drawable/ic_google"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Google"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="17dp"
                    android:layout_marginStart="@dimen/dimen_10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:gravity="center">
            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_text_content_1"
                android:textSize="@dimen/dimen_14dp"
                android:fontFamily="@font/poppins_semi_bold"/>
            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_text_content_2"
                android:textSize="@dimen/dimen_19dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/brown_500"/>
        </LinearLayout>



    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Large.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>