<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotPasswordActivity"
    android:background="@color/white"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutForgot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cavBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/dimen_5dp"
            app:cardCornerRadius="@dimen/dimen_5dp"
            android:clickable="true"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintVertical_bias="0.02"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <ImageView
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:scaleType="centerInside"
                android:padding="@dimen/dimen_4dp"
                android:src="@drawable/ic_back"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass_title"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/dimen_24dp"
            android:textColor="@color/black"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.02"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingVertical="@dimen/dimen_20dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cavImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey_50"
                app:cardCornerRadius="@dimen/dimen_200dp"
                app:cardElevation="0dp">
                <ImageView
                    android:layout_width="@dimen/dimen_170dp"
                    android:layout_height="@dimen/dimen_170dp"
                    android:scaleType="centerCrop"
                    android:layout_margin="@dimen/dimen_30dp"
                    android:src="@drawable/img_forgot_pass"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/dimen_18dp"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:textColor="@color/black"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_100"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/grey_100"
                android:layout_marginTop="@dimen/dimen_35dp"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEmailForgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey_150"
                    android:hint="@string/forgot_pass_hint"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/dimen_10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_20dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/cavButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_70dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="@dimen/dimen_5dp">
                <Button
                    android:id="@+id/btn_forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_pass_text_button"
                    android:textAllCaps="false"
                    android:paddingHorizontal="@dimen/dimen_100dp"
                    android:background="@drawable/custom_button_forgot_pass"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="@dimen/dimen_20dp"
                    android:textColor="@color/black"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Large.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>